# hr-monitor

./: ble-client.py  ble-scan.py  ble-server.py  hr.data  pyproject.toml
